--- a/2/index.html
+++ b/2/index.html
@@ -1,28 +1,34 @@
 <html>
 
 <head>
-    <title>Learning WebGL &mdash; lesson 1</title>
+    <title>Learning WebGL &mdash; lesson 5</title>
     <meta http-equiv="content-type" content="text/html; charset=ISO-8859-1">
 
     <script type="text/javascript" src="glMatrix-0.9.5.min.js"></script>
+    <script type="text/javascript" src="webgl-utils.js"></script>
+
 
     <script type="text/javascript">
 
-        var gl;
-        var Num;
-        var Max;
         var Mouse =
         {
-            Flag: false,
-            OldX: 0.0,
-            OldY: 0.0,
-            OldS: 0.0,
-            S: 1.0,
-            X: 0.0,
-            Y: 0.0,
-            PosX: 0.0,
-            PosY: 0.0
+            Flag : false,
+            OldX : 0.0,
+            OldY : 0.0,
+            OldS : 0.0,
+            S : 1.0,
+            X : 0.0,
+            Y : 0.0,
+            PosX : 0.0,
+            PosY : 0.0
         };
+        var Screen =
+        {
+            L, T, B, R
+        };
+        var Max;
+        var Num;
+        var gl;
 
         function initGL(canvas) {
             try {
@@ -31,26 +37,30 @@
                 gl.viewportHeight = canvas.height;
             } catch (e) {
             }
-            if (!gl)
-                alert("Could not initialise WebGL.");
+            if (!gl) {
+                alert("Could not initialise WebGL, sorry :-(");
+            }
         }
 
-        function getShader(gl, id) {
-            var str = "";
+        function readFile(path) {
+            var File = new XMLHttpRequest();
+            var txt = "";
+            File.open("GET", path, false);
+            File.send(null);
+            txt = File.responseText;
+            return txt;
+        }
+
+        function getShader(gl, path, type) {
+            str = readFile(path);
             var shader;
-            var xmlhttp = new XMLHttpRequest();
-
-            xmlhttp.open('GET', id, false);
-            xmlhttp.send();
-            str = xmlhttp.responseText;
-
-            if (id.split('.')[1] == "frag")
+            if (type == "frag") {
                 shader = gl.createShader(gl.FRAGMENT_SHADER);
-            else if (id.split('.')[1] == "vert")
+            } else if (type == "vert") {
                 shader = gl.createShader(gl.VERTEX_SHADER);
-            else
+            } else {
                 return null;
-
+            }
             gl.shaderSource(shader, str);
             gl.compileShader(shader);
             if (!gl.getShaderParameter(shader, gl.COMPILE_STATUS)) {
@@ -60,69 +70,49 @@
             return shader;
         }
 
-
         var shaderProgram;
-        var shaderProgramfractal;
 
         function initShaders() {
-            var fragmentShader = getShader(gl, "cube.frag");
-            var vertexShader = getShader(gl, "cube.vert");
-
+            var fragmentShader = getShader(gl, "fract.frag", "frag");
+            var vertexShader = getShader(gl, "fract.vert", "vert");
             shaderProgram = gl.createProgram();
-            gl.attachShader(shaderProgram, vertexShader);
             gl.attachShader(shaderProgram, fragmentShader);
+            gl.attachShader(shaderProgram, vertexShader);
             gl.linkProgram(shaderProgram);
-            if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS)) {
+            if (!gl.getProgramParameter(shaderProgram, gl.LINK_STATUS))
                 alert("Could not initialise shaders");
-            }
             gl.useProgram(shaderProgram);
             shaderProgram.vertexPositionAttribute = gl.getAttribLocation(shaderProgram, "aVertexPosition");
             gl.enableVertexAttribArray(shaderProgram.vertexPositionAttribute);
-            shaderProgram.textureCoordAttribute = gl.getAttribLocation(shaderProgram, "aTextureCoord");
-            gl.enableVertexAttribArray(shaderProgram.textureCoordAttribute);
             shaderProgram.pMatrixUniform = gl.getUniformLocation(shaderProgram, "uPMatrix");
             shaderProgram.mvMatrixUniform = gl.getUniformLocation(shaderProgram, "uMVMatrix");
             shaderProgram.samplerUniform = gl.getUniformLocation(shaderProgram, "uSampler");
 
-            var fragmentShader2 = getShader(gl, "fract.frag");
-            var vertexShader2 = getShader(gl, "fract.vert");
-
-            shaderProgramfractal = gl.createProgram();
-            gl.attachShader(shaderProgramfractal, vertexShader2);
-            gl.attachShader(shaderProgramfractal, fragmentShader2);
-            gl.linkProgram(shaderProgramfractal);
-            if (!gl.getProgramParameter(shaderProgramfractal, gl.LINK_STATUS)) {
-                alert("Could not initialise shaders");
-            }
-            gl.useProgram(shaderProgramfractal);
-            shaderProgramfractal.vertexPositionAttribute = gl.getAttribLocation(shaderProgramfractal, "aVertexPosition");
-            gl.enableVertexAttribArray(shaderProgramfractal.vertexPositionAttribute);
-            shaderProgramfractal.pMatrixUniform = gl.getUniformLocation(shaderProgramfractal, "uPMatrix");
-            shaderProgramfractal.mvMatrixUniform = gl.getUniformLocation(shaderProgramfractal, "uMVMatrix");
         }
 
 
         function handleLoadedTexture(texture) {
             gl.bindTexture(gl.TEXTURE_2D, texture);
             gl.pixelStorei(gl.UNPACK_FLIP_Y_WEBGL, true);
-
             gl.texImage2D(gl.TEXTURE_2D, 0, gl.RGBA, gl.RGBA, gl.UNSIGNED_BYTE, texture.image);
             gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MAG_FILTER, gl.NEAREST);
             gl.texParameteri(gl.TEXTURE_2D, gl.TEXTURE_MIN_FILTER, gl.NEAREST);
-
             gl.bindTexture(gl.TEXTURE_2D, null);
         }
 
-        var cubeTexture;
+
+        var neheTexture;
 
         function initTexture() {
-            cubeTexture = gl.createTexture();
-            cubeTexture.image = new Image();
-            cubeTexture.image.onload = function () {
-                handleLoadedTexture(cubeTexture)
-            };
-            cubeTexture.image.src = "gradient.png";
+            neheTexture = gl.createTexture();
+            neheTexture.image = new Image();
+            neheTexture.image.onload = function () {
+                handleLoadedTexture(neheTexture)
+            }
+
+            neheTexture.image.src = "gradient.png";
         }
+
 
         var mvMatrix = mat4.create();
         var mvMatrixStack = [];
@@ -130,14 +120,14 @@
 
         function mvPushMatrix() {
             var copy = mat4.create();
-
             mat4.set(mvMatrix, copy);
             mvMatrixStack.push(copy);
         }
 
         function mvPopMatrix() {
-            if (mvMatrixStack.length == 0)
+            if (mvMatrixStack.length == 0) {
                 throw "Invalid popMatrix!";
+            }
             mvMatrix = mvMatrixStack.pop();
         }
 
@@ -161,40 +151,40 @@
             gl.bindBuffer(gl.ARRAY_BUFFER, cubeVertexPositionBuffer);
             vertices = [
                 // Front face
-                -1.0, -1.0, 1.0,
-                1.0, -1.0, 1.0,
-                1.0, 1.0, 1.0,
-                -1.0, 1.0, 1.0,
+                -1.0, -1.0,  1.0,
+                1.0, -1.0,  1.0,
+                1.0,  1.0,  1.0,
+                -1.0,  1.0,  1.0,
 
                 // Back face
                 -1.0, -1.0, -1.0,
-                -1.0, 1.0, -1.0,
-                1.0, 1.0, -1.0,
+                -1.0,  1.0, -1.0,
+                1.0,  1.0, -1.0,
                 1.0, -1.0, -1.0,
 
                 // Top face
-                -1.0, 1.0, -1.0,
-                -1.0, 1.0, 1.0,
-                1.0, 1.0, 1.0,
-                1.0, 1.0, -1.0,
+                -1.0,  1.0, -1.0,
+                -1.0,  1.0,  1.0,
+                1.0,  1.0,  1.0,
+                1.0,  1.0, -1.0,
 
                 // Bottom face
                 -1.0, -1.0, -1.0,
                 1.0, -1.0, -1.0,
-                1.0, -1.0, 1.0,
-                -1.0, -1.0, 1.0,
+                1.0, -1.0,  1.0,
+                -1.0, -1.0,  1.0,
 
                 // Right face
                 1.0, -1.0, -1.0,
-                1.0, 1.0, -1.0,
-                1.0, 1.0, 1.0,
-                1.0, -1.0, 1.0,
+                1.0,  1.0, -1.0,
+                1.0,  1.0,  1.0,
+                1.0, -1.0,  1.0,
 
                 // Left face
                 -1.0, -1.0, -1.0,
-                -1.0, -1.0, 1.0,
-                -1.0, 1.0, 1.0,
-                -1.0, 1.0, -1.0,
+                -1.0, -1.0,  1.0,
+                -1.0,  1.0,  1.0,
+                -1.0,  1.0, -1.0,
             ];
             gl.bufferData(gl.ARRAY_BUFFER, new Float32Array(vertices), gl.STATIC_DRAW);
             cubeVertexPositionBuffer.itemSize = 3;
@@ -246,18 +236,17 @@
             cubeVertexIndexBuffer = gl.createBuffer();
             gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, cubeVertexIndexBuffer);
             var cubeVertexIndices = [
-                0, 1, 2, 0, 2, 3,    // Front face
-                4, 5, 6, 4, 6, 7,    // Back face
-                8, 9, 10, 8, 10, 11,  // Top face
-                12, 13, 14, 12, 14, 15, // Bottom face
-                16, 17, 18, 16, 18, 19, // Right face
-                20, 21, 22, 20, 22, 23  // Left face
+                0, 1, 2,      0, 2, 3,    // Front face
+                4, 5, 6,      4, 6, 7,    // Back face
+                8, 9, 10,     8, 10, 11,  // Top face
+                12, 13, 14,   12, 14, 15, // Bottom face
+                16, 17, 18,   16, 18, 19, // Right face
+                20, 21, 22,   20, 22, 23  // Left face
             ];
             gl.bufferData(gl.ELEMENT_ARRAY_BUFFER, new Uint16Array(cubeVertexIndices), gl.STATIC_DRAW);
             cubeVertexIndexBuffer.itemSize = 1;
             cubeVertexIndexBuffer.numItems = 36;
         }
-
 
         var xRot = 0;
         var yRot = 0;
@@ -266,34 +255,34 @@
         function drawScene() {
             gl.viewport(0, 0, gl.viewportWidth, gl.viewportHeight);
             gl.clear(gl.COLOR_BUFFER_BIT | gl.DEPTH_BUFFER_BIT);
-
             mat4.perspective(45, gl.viewportWidth / gl.viewportHeight, 0.1, 100.0, pMatrix);
-
+            gl.activeTexture(gl.TEXTURE0);
+            gl.bindTexture(gl.TEXTURE_2D, neheTexture);
+            gl.uniform1i(shaderProgram.samplerUniform, 0);
             mat4.identity(mvMatrix);
-
-            mat4.translate(mvMatrix, [0.0, 0.0, -5.0]);
-
-            mat4.rotate(mvMatrix, degToRad(xRot), [1, 0, 0]);
-            mat4.rotate(mvMatrix, degToRad(yRot), [0, 1, 0]);
-            mat4.rotate(mvMatrix, degToRad(zRot), [0, 0, 1]);
-
+            mat4.translate(mvMatrix, [-0.32, 0.0, -1]);
             gl.bindBuffer(gl.ARRAY_BUFFER, cubeVertexPositionBuffer);
             gl.vertexAttribPointer(shaderProgram.vertexPositionAttribute, cubeVertexPositionBuffer.itemSize, gl.FLOAT, false, 0, 0);
 
-            gl.bindBuffer(gl.ARRAY_BUFFER, cubeVertexTextureCoordBuffer);
-            gl.vertexAttribPointer(shaderProgram.textureCoordAttribute, cubeVertexTextureCoordBuffer.itemSize, gl.FLOAT, false, 0, 0);
+            gl.uniform1i(gl.getUniformLocation(shaderProgram, "Max"), Max);
+            gl.uniform1f(gl.getUniformLocation(shaderProgram, "Num"), Num);
+            gl.uniform1f(gl.getUniformLocation(shaderProgram, "S"), Mouse.S);
+            gl.uniform2f(gl.getUniformLocation(shaderProgram, "Mouse"), Mouse.X, Mouse.Y);
+            gl.uniform1f(gl.getUniformLocation(shaderProgram, "L"), L);
+            gl.uniform1f(gl.getUniformLocation(shaderProgram, "R"), R);
+            gl.uniform1f(gl.getUniformLocation(shaderProgram, "T"), T);
+            gl.uniform1f(gl.getUniformLocation(shaderProgram, "B"), B);
+            gl.uniformMatrix4fv(shaderProgram.pMatrixUniform, false, pMatrix);
+            gl.uniformMatrix4fv(shaderProgram.mvMatrixUniform, false, mvMatrix);
 
-            gl.activeTexture(gl.TEXTURE0);
-            gl.bindTexture(gl.TEXTURE_2D, cubeTexture);
-            gl.uniform1i(shaderProgram.samplerUniform, 0);
-
-            gl.bindBuffer(gl.ELEMENT_ARRAY_BUFFER, cubeVertexIndexBuffer);
-            setMatrixUniforms();
-            gl.drawElements(gl.TRIANGLES, cubeVertexIndexBuffer.numItems, gl.UNSIGNED_SHORT, 0);
+            gl.drawArrays(gl.TRIANGLE_STRIP, 0, cubeVertexPositionBuffer.numItems);
         }
+
+
         var lastTime = 0;
 
-        function animate() {
+        function animate()
+        {
             var timeNow = new Date().getTime();
             if (lastTime != 0) {
                 var elapsed = timeNow - lastTime;
@@ -305,83 +294,35 @@
             lastTime = timeNow;
         }
 
-        function onWheel(e) {
-            Mouse.S += e.deltaY * Mouse.S * 0.001;
-            Mouse.OldS = Mouse.S;
-            Mouse.X -= (1.0 - Mouse.S / Mouse.OldS) * Mouse.PosX * Mouse.S;
-            Mouse.Y -= (1.0 - Mouse.S / Mouse.OldS) * Mouse.PosY * Mouse.S;
-        }
-
-        function MouseDown(c) {
-            var e = document.getElementById("lesson01-canvas");
-
-            Mouse.Flag = true;
-            Mouse.OldX = 2 * c.clientX / e.width - 1;
-            Mouse.OldY = 1 - 2 * c.clientY / e.height;
-        }
-
-        function MouseUp() {
-            Mouse.Flag = false;
-        }
-
-        function MouseMove(c) {
-            var e = document.getElementById("lesson01-canvas");
-
-            Mouse.X = 2 * c.clientX / e.width - 1;
-            Mouse.Y = 1 - 2 * c.clientY / e.height;
-
-            if (Mouse.Flag) {
-                Mouse.X += (Mouse.PosX - Mouse.OldX) * Mouse.S;
-                Mouse.Y += (Mouse.PosY - Mouse.OldY) * Mouse.S;
-                Mouse.OldX = Mouse.PosX;
-                Mouse.OldY = Mouse.PosY;
-            }
-        }
 
         function tick() {
+            requestAnimFrame(tick);
             drawScene();
             animate();
         }
 
+
         function webGLStart() {
-            var canvas = document.getElementById("lesson01-canvas");
+            var canvas = document.getElementById("lesson05-canvas");
             initGL(canvas);
             initShaders();
             initBuffers();
             initTexture();
 
-            canvas.addEventListener("wheel", onWheel);
-            canvas.addEventListener("mousemove", MouseMove);
-            window.addEventListener("mouseup", MouseUp);
-            canvas.addEventListener("mousedown", MouseDown);
-
-            gl.clearColor(0.0, 1.0, 0.0, 1.0);
+            gl.clearColor(0.0, 0.0, 0.0, 1.0);
             gl.enable(gl.DEPTH_TEST);
-            drawScene();
+
             tick();
         }
 
 
-        function Update1() {
-            Num = document.getElementById("Num").value;
-        }
-
-        function Update2() {
-            Max = document.getElementById("Max").value;
-        }
-
     </script>
-
 
 </head>
 
 
 <body onload="webGLStart();">
-<canvas id="lesson01-canvas" style="border: none;" width="768" height="768"></canvas>
-<br/>
 
-<input type="range" min="1" max="100" value="25" id="Num" onchange="Update1()"> <br/>
-<input type="range" min="1" max="100" value="25" id="Max" onchange="Update2()"> <br/>
-</body>
+<canvas id="lesson05-canvas" style="border: none;" width="500" height="500"></canvas>
 
 </html>
